# nix-cmake-rpath

./: .gitignore  CMakeLists.txt  README.md  check  default.nix
scripts/: inspect
src/: hello.cpp  hello_lib.cpp  hello_lib.hpp
test/: test_hello_lib.cpp
